feat: add tests [wip]

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:deps": "father prebundle",
     "lint": "eslint \"{src,test,packages}/**/*.{js,jsx,ts,tsx}\"",
     "prepare": "husky",
-    "prepublishOnly": "father doctor && npm run build"
+    "prepublishOnly": "father doctor && npm run build",
+    "test": "vitest"
   },
   "keywords": [],
   "authors": [
@@ -48,6 +49,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.4",
     "prettier": "^3.0.3",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "vitest": "^1.6.0"
   }
 }
